--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Nursery rhymes'
+- GITenberg
 title: "Chenodia\r\nOr, the Classical Mother Goose"
 url: http://www.gutenberg.org/ebooks/28745
